# PLOP

./: .gitignore  .gitmodules  LICENCE  README.md  actions.pl  exec.sh  kb.pl  map.pl  one_prolog_to_rule_them_all.py  output.txt  planner.pl  planner.py  requirements.txt  sent_query.txt  tests.pl  the_file.pl  ui.py  ui_multi_steps.py  ui_single_step.py
LLM/: LLM.py  few-shots-cc.yaml  few-shots-hl.yaml  few-shots-ll.yaml  few-shots-new.yaml  gpt_convo.py  utility.py
LLM/conf/: gpt35-turbo.yaml  gpt40-128k.yaml  gpt40-32k.yaml  gpt4o.yaml
LLM/examples/cc/: few-shots-cc.yaml  hl.yaml  ll.yaml
LLM/examples/multi/: few-shots-hl.yaml  few-shots-ll.yaml
LLM/examples/multi/hl/: general.yaml
LLM/examples/multi/hl/arch/: actions.yaml  kb.yaml  states.yaml
LLM/examples/multi/hl/blocksworld/: actions.yaml  few-shots-blocksworld.yaml  kb.yaml  states.yaml
LLM/examples/multi/ll/: blocksworld.yaml  general.yaml
LLM/examples/single/: few-shots-hl.yaml  few-shots-ll.yaml
LLM/examples/single/hl/: blocksworld.yaml
LLM/few-shots_kb/: arch.yaml  arch_single copy.yaml  arch_single.yaml  general.yaml
LLM/few_shots_cc/: hl.yaml  ll.yaml
LLM/few_shots_hl/: arch_multi.yaml  blocksworld_multi.yaml  general_single.yaml  service_case.yaml
LLM/few_shots_ll/: arch.yaml  blocksworld_multi.yaml  cooking_case.yaml  general.yaml  general_multi.yaml
behaviour_tree/src/behaviour_tree/: CMakeLists.txt  package.xml
behaviour_tree/src/behaviour_tree/include/: print_msg.hpp
behaviour_tree/src/behaviour_tree/src/: main.cpp
behaviour_tree/src/behaviour_tree_ps2/: CMakeLists.txt  package.xml
behaviour_tree/src/behaviour_tree_ps2/src/: behaviour_tree_node.cpp
examples/test/: actions.pl
examples/test_ll/: actions.pl  kb.pl  tests.pl
exps/multi-steps/1/kb/: kb_hl.pl  kb_ll.pl
exps/multi-steps/1/output/: output_hl.txt  output_ll.txt
exps/multi-steps/1/query/: query_hl.txt
llm_kb_gen/: __init__.py  dataset_generator.py  export_dataset_from_hf.py  few-shots-new.yaml  gpt_convo.py  gpt_convo_4-turbo.py  requirements.txt  test.txt
llm_kb_gen/conf/: gpt35-turbo.yaml  gpt40-128k.yaml  gpt40-32k.yaml  gpt40-8k.yaml
llm_kb_gen/few-shots/: blocks_case.yaml  general.yaml  medical_case.yaml  service_case.yaml
llm_kb_gen/few-shots_feedback/: error_management.yaml  semantic_errors.yaml  syntax_incorrect_action_name.yaml  syntax_incorrect_argument_name.yaml  syntax_incorrect_predicate_name.yaml  syntax_incorrect_punctuation.yaml  types.txt
llm_kb_gen/few-shots_kb/: blocks_case.yaml  general.yaml  medical_case.yaml
llm_kb_gen/fine_tuning/: fine_tuning_0_2023_12_22-12_48_17.jsonl  fine_tuning_0_2023_12_22-12_52_50.jsonl  fine_tuning_0_2023_12_22-18_29_48.jsonl  fine_tuning_1_2023_12_22-12_52_50.jsonl  fine_tuning_2_2023_12_22-12_52_50.jsonl  fine_tuning_3_2023_12_22-12_52_50.jsonl  merged.yaml
llm_ll_gen/: __init__.py  few_shots_ll.yaml  llm_ll.py  query.txt  query_durative.txt
llm_ll_gen/few_shots_ll/: blocks_case.yaml  general.yaml
llm_ll_gen/tests_run/: 20240121_180000.txt  20240121_180737.txt  20240121_181008.txt  20240121_181200.txt  20240121_181300.txt  20240121_181620.txt  20240121_181914.txt  20240121_182047.txt  20240502_160759.txt
llm_ui/: README.md  package-lock.json  package.json
llm_ui/src/: App.js  index.css  styles.css  useWindowDimensions.js
llm_ui/src/components/footer/: Footer.css  Footer.js
llm_ui/src/components/footerBottom/: FooterBottom.css  FooterBottom.js
llm_ui/src/components/header/: Header.css  Header.js
llm_ui/src/components/main/: Main.css  Main.js
llm_ui/src/components/subheader/: subheader.css  subheader.js
prolog_planner/: actions.pl  conditions_tests.txt  full_planner.pl  full_planner_interleaved.pl  full_planner_separated.pl  graph.pl  hl_planner.pl  includes.pl  kb.pl  ll_planner.pl  mappings.pl  planner.pl  planner.py  tests.pl
prolog_planner/MILP/: MILP.py  __main__.py
prolog_planner/examples/barista/: actions.pl  kb.pl  mappings.pl  tests.pl
prolog_planner/examples/block_world/: actions.pl
prolog_planner/examples/blocks_world/: actions.pl  kb.pl  mappings.pl  tests.pl
prolog_planner/examples/building/: actions.pl  kb.pl  mappings.pl  tests.pl
prolog_planner/examples/building_old/: actions.pl  hl_description.txt  kb.pl  ll_description.txt  mappings.pl  tests.pl
prolog_planner/examples/llm/: actions.pl  kb.pl  mappings.pl  tests.pl
prolog_planner/examples/test/: kb.pl  tests.pl
prolog_planner/tests/: planner_tests.pl
prolog_planner/utility/: actions.pl  adts.pl  conditions.pl  resources.pl  state.pl  utility.pl  utility.py
prolog_planner/utility/Graph/: Graph.py
prolog_planner/utility/tests/: conditions_tests.pl
python_interface/: MILP.html  one_prolog_to_rule_them_all.py  planner.py  requirements.txt
python_interface/BT/: BT.py
python_interface/MILP/: MILP.py
python_interface/Prolog/: __init__.py  __main__.py  prolog.py
python_interface/STN/: STN.py
python_interface/utility/: utility.py
python_interface/utility/Graph/: Graph.py
server/: requirements.txt  server.py
server/msg/: msg_hl.txt  msg_ll.txt
(+10 files in other folders)
